--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0" />
-    <title>Българска Платформа за Пъзели</title>
+    <title>Puzzle games</title>
     <meta name="description" content="Интерактивна платформа за пъзели на български език" />
     <meta name="author" content="Puzzle Platform Bulgaria" />
     
