--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0" />
-    <title>Puzzle games</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no" />
+    <title>Българска Платформа за Пъзели</title>
     <meta name="description" content="Интерактивна платформа за пъзели на български език" />
     <meta name="author" content="Puzzle Platform Bulgaria" />
     
@@ -14,12 +14,10 @@
     <!-- Mobile app meta tags -->
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Пъзели BG" />
     <meta name="theme-color" content="#fb923c" />
     <meta name="msapplication-TileColor" content="#fed7aa" />
-    <meta name="screen-orientation" content="landscape" />
-    <meta name="orientation" content="landscape" />
     
     <!-- Prevent zoom on mobile -->
     <meta name="format-detection" content="telephone=no" />
